<resources>
    <string name="app_name">Rewind Perfect TV</string>
    <string name="array_buffer_type_1">1</string>
    <string name="array_buffer_type_2">2</string>
    <string name="array_buffer_type_3">3</string>
    <string name="array_buffer_type_4">4</string>
    <string name="array_buffer_type_value_1">1</string>
    <string name="array_buffer_type_value_2">2</string>
    <string name="array_buffer_type_value_3">3</string>
    <string name="array_buffer_type_value_4">4</string>
    <string name="array_decoder_auto">Auto</string>
    <string name="array_decoder_hw">Hardware</string>
    <string name="array_decoder_hw_plus">HW+</string>
    <string name="array_decoder_native">Native</string>
    <string name="array_decoder_sw">Software</string>
    <string name="array_decoder_value_auto">auto</string>
    <string name="array_decoder_value_hw">hw</string>
    <string name="array_decoder_value_hw_plus">hw_plus</string>
    <string name="array_decoder_value_native">native</string>
    <string name="array_decoder_value_sw">sw</string>
    <string name="array_font_size_extra_large">Extra large</string>
    <string name="array_font_size_large">Large</string>
    <string name="array_font_size_small">Small</string>
    <string name="array_font_size_standard">Standard</string>
    <string name="array_font_size_value_extra_large">3</string>
    <string name="array_font_size_value_large">2</string>
    <string name="array_font_size_value_small">0</string>
    <string name="array_font_size_value_standard">1</string>
    <string name="array_language_ar">Arabic</string>
    <string name="array_language_auto">Auto</string>
    <string name="array_language_cs">Čeština</string>
    <string name="array_language_de">Deutsch</string>
    <string name="array_language_el">Ελληνική</string>
    <string name="array_language_en">English</string>
    <string name="array_language_es">Español</string>
    <string name="array_language_fr">Français</string>
    <string name="array_language_hr">Hrvatski</string>
    <string name="array_language_hu">Magyar</string>
    <string name="array_language_it">Italiano</string>
    <string name="array_language_iw">Hebrew</string>
    <string name="array_language_ku">Kurdî</string>
    <string name="array_language_lt">Lietuvių</string>
    <string name="array_language_mk">Македонски</string>
    <string name="array_language_nl">Nederlands</string>
    <string name="array_language_pl">Polski</string>
    <string name="array_language_pt">Português</string>
    <string name="array_language_ro">Română</string>
    <string name="array_language_ru">Русский</string>
    <string name="array_language_sl">Slovenski</string>
    <string name="array_language_sq">Shqiptar</string>
    <string name="array_language_sr">Srpski</string>
    <string name="array_language_sv">Svenska</string>
    <string name="array_language_tr">Türkçe</string>
    <string name="array_language_uk">Українська</string>
    <string name="array_language_value_ar">ar</string>
    <string name="array_language_value_auto">auto</string>
    <string name="array_language_value_cs">cs</string>
    <string name="array_language_value_de">de</string>
    <string name="array_language_value_el">el</string>
    <string name="array_language_value_en">en</string>
    <string name="array_language_value_es">es</string>
    <string name="array_language_value_fr">fr</string>
    <string name="array_language_value_hr">hr</string>
    <string name="array_language_value_hu">hu</string>
    <string name="array_language_value_it">it</string>
    <string name="array_language_value_iw">iw</string>
    <string name="array_language_value_ku">ku</string>
    <string name="array_language_value_lt">lt</string>
    <string name="array_language_value_mk">mk</string>
    <string name="array_language_value_nl">nl</string>
    <string name="array_language_value_pl">pl</string>
    <string name="array_language_value_pt">pt</string>
    <string name="array_language_value_ro">ro</string>
    <string name="array_language_value_ru">ru</string>
    <string name="array_language_value_sl">sl</string>
    <string name="array_language_value_sq">sq</string>
    <string name="array_language_value_sr">sr</string>
    <string name="array_language_value_sv">sv</string>
    <string name="array_language_value_tr">tr</string>
    <string name="array_language_value_uk">uk</string>
    <string name="array_language_value_vi">vi</string>
    <string name="array_language_value_zh">zh</string>
    <string name="array_language_vi">Tiếng Việt</string>
    <string name="array_language_zh">中國</string>
    <string name="array_position_bl">Bottom left</string>
    <string name="array_position_br">Bottom right</string>
    <string name="array_position_tl">Top left</string>
    <string name="array_position_tr">Top right</string>
    <string name="array_position_value_bl">bl</string>
    <string name="array_position_value_br">br</string>
    <string name="array_position_value_tl">tl</string>
    <string name="array_position_value_tr">tr</string>
    <string name="array_theme_emerald">Emerald</string>
    <string name="array_theme_satin">Satin</string>
    <string name="array_theme_sky">Sky</string>
    <string name="array_theme_snow">Snow</string>
    <string name="array_theme_value_emerald">emerald</string>
    <string name="array_theme_value_satin">satin</string>
    <string name="array_theme_value_sky">sky</string>
    <string name="array_theme_value_snow">snow</string>
    <string name="array_theme_value_velvet">velvet</string>
    <string name="array_theme_velvet">Velvet</string>
    <string name="array_transparency_1">1</string>
    <string name="array_transparency_2">2</string>
    <string name="array_transparency_3">3</string>
    <string name="array_transparency_4">4</string>
    <string name="array_transparency_value_1">1</string>
    <string name="array_transparency_value_2">2</string>
    <string name="array_transparency_value_3">3</string>
    <string name="array_transparency_value_4">4</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="epg_download_at_each_update">Download at each update</string>
    <string name="epg_download_at_each_update_value">always</string>
    <string name="epg_download_if_no_data">Download if no data on current date</string>
    <string name="epg_download_if_no_data_value">ifnodata</string>
    <string name="epg_download_once_a_day">Download once a day</string>
    <string name="epg_download_once_a_day_value">onceaday</string>
    <string name="epg_download_once_a_week">Download once a week</string>
    <string name="epg_download_once_a_week_value">onceaweek</string>
    <string name="epg_format_jtv">JTV</string>
    <string name="epg_format_value_jtv">jtv</string>
    <string name="epg_format_value_xmltv">xmltv</string>
    <string name="epg_format_xmltv">XMLTV</string>
    <string name="exo_controls_fastforward_description">Fast forward</string>
    <string name="exo_controls_fullscreen_description">Fullscreen mode</string>
    <string name="exo_controls_next_description">Next track</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_previous_description">Previous track</string>
    <string name="exo_controls_repeat_all_description">Repeat all</string>
    <string name="exo_controls_repeat_off_description">Repeat none</string>
    <string name="exo_controls_repeat_one_description">Repeat one</string>
    <string name="exo_controls_rewind_description">Rewind</string>
    <string name="exo_controls_shuffle_description">Shuffle</string>
    <string name="exo_controls_stop_description">Stop</string>
    <string name="exo_download_completed">Download completed</string>
    <string name="exo_download_description">Download</string>
    <string name="exo_download_downloading">Downloading</string>
    <string name="exo_download_failed">Download failed</string>
    <string name="exo_download_notification_channel_name">Downloads</string>
    <string name="exo_download_removing">Removing downloads</string>
    <string name="exo_item_list">%1$s, %2$s</string>
    <string name="exo_track_bitrate">%1$.2f Mbps</string>
    <string name="exo_track_mono">Mono</string>
    <string name="exo_track_resolution">%1$d × %2$d</string>
    <string name="exo_track_selection_auto">Auto</string>
    <string name="exo_track_selection_none">None</string>
    <string name="exo_track_selection_title_audio">Audio</string>
    <string name="exo_track_selection_title_text">Text</string>
    <string name="exo_track_selection_title_video">Video</string>
    <string name="exo_track_stereo">Stereo</string>
    <string name="exo_track_surround">Surround sound</string>
    <string name="exo_track_surround_5_point_1">5.1 surround sound</string>
    <string name="exo_track_surround_7_point_1">7.1 surround sound</string>
    <string name="exo_track_unknown">Unknown</string>
    <string name="osd_channels_window_all_channels">All channels</string>
    <string name="osd_channels_window_groups">Groups</string>
    <string name="pref_advanced">Advanced</string>
    <string name="pref_advanced_title_channels_management_mode">Channels management mode</string>
    <string name="pref_advanced_title_download_supposed_logos">Download supposed logos</string>
    <string name="pref_advanced_title_epg_assign_mode">EPG assign mode</string>
    <string name="pref_advanced_title_groups_management_mode">Groups management mode</string>
    <string name="pref_advanced_title_logos_assign_mode">Logos assign mode</string>
    <string name="pref_clock">Clock</string>
    <string name="pref_clock_position">Position</string>
    <string name="pref_clock_show">Show clock</string>
    <string name="pref_defaults">Defaults</string>
    <string name="pref_defaults_title_backup_settings">Backup settings</string>
    <string name="pref_defaults_title_reset_to_defaults">Logout</string>
    <string name="pref_defaults_title_restore_settings">Restore settings</string>
    <string name="pref_general">General</string>
    <string name="pref_general_title_iptv_data_server">IPTV data server</string>
    <string name="pref_general_title_logos_dir">Logos directory</string>
    <string name="pref_general_title_udpxy_server">udpxy server</string>
    <string name="pref_gui">GUI</string>
    <string name="pref_gui_enable_perfect_remote">Enable Perfect Cast/Remote</string>
    <string name="pref_gui_font_size">Font size</string>
    <string name="pref_gui_language">Language</string>
    <string name="pref_gui_pin">PIN code</string>
    <string name="pref_gui_show_channels_groups_as_folders">Show channels groups as folders</string>
    <string name="pref_gui_theme">Theme</string>
    <string name="pref_gui_title_autostart_at_bootup">Autostart at bootup</string>
    <string name="pref_gui_transparency">Transparency</string>
    <string name="pref_playback">Playback</string>
    <string name="pref_playback_title_afr">AFR</string>
    <string name="pref_playback_title_buffer_size">Buffer size</string>
    <string name="pref_playback_title_change_system_volume">Change system volume</string>
    <string name="pref_playback_title_change_volume_by_left_right_keys">Change volume by left/right keys</string>
    <string name="pref_playback_title_decoder">Decoder</string>
    <string name="pref_playback_title_play_last_channel_at_startup">Play last channel at startup</string>
    <string name="pref_playback_title_playback_in_background">Playback in background</string>
    <string name="pref_playback_title_user_agent">User-Agent</string>
    <string name="pref_provider_title_server">Server</string>
    <string name="pref_provider_title_user_name">Username</string>
    <string name="pref_provider_title_user_password">Password</string>
    <string name="text_ok">OK</string>
</resources>